--- a/sysdeps/unified/meson.build
+++ b/sysdeps/unified/meson.build
@@ -81,13 +81,26 @@ if not no_headers
 endif
 
 if not headers_only
-	crt = custom_target('crt0',
-		build_by_default: true,
-		command: c_compiler.cmd_array() + ['-c', '-o', '@OUTPUT@', '@INPUT@'],
-		input: 'crt-x86_64/crt0.S',
-		output: 'crt0.o',
-		install: true,
-		install_dir: get_option('libdir')
-	)
+	crtstuff = ['crt0']
+	if host_machine.cpu_family() in ['x86_64', 'aarch64', 'riscv64']
+		crtstuff += [
+			'Scrt1',
+			'crti',
+			'crtn'
+		]
+	endif
+	foreach crtthing : crtstuff
+		crtf = crtthing + '.S'
+		crt_src = files(host_machine.cpu_family() / 'crt-src' / crtf)
+		crt = custom_target(
+			crtthing,
+			build_by_default: true,
+			command: c_compiler.cmd_array() + ['-c', '-o', '@OUTPUT@', '@INPUT@'],
+			input: crt_src,
+			output: crtthing + '.o',
+			install: true,
+			install_dir: get_option('libdir')
+		)
+	endforeach
 endif
 
